Added Events table, implemented the code for users to add events to their accounts

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -158,3 +158,89 @@ ListUserTitle_zipcode=Zipcode
 ListUserTitle_securityQuestion=SecurityQuestion
 ListUserTitle_securityAnswer=SecurityAnswer
 ListUserTitle_email=Email
+UserEventsCreated=UserEvents was successfully created.
+UserEventsUpdated=UserEvents was successfully updated.
+UserEventsDeleted=UserEvents was successfully deleted.
+CreateUserEventsTitle=Create New UserEvents
+CreateUserEventsSaveLink=Save
+CreateUserEventsShowAllLink=Show All UserEvents Items
+CreateUserEventsIndexLink=Index
+CreateUserEventsLabel_id=Id:
+CreateUserEventsRequiredMessage_id=The Id field is required.
+CreateUserEventsTitle_id=Id
+CreateUserEventsLabel_eventName=EventName:
+CreateUserEventsRequiredMessage_eventName=The EventName field is required.
+CreateUserEventsTitle_eventName=EventName
+CreateUserEventsLabel_latitude=Latitude:
+CreateUserEventsRequiredMessage_latitude=The Latitude field is required.
+CreateUserEventsTitle_latitude=Latitude
+CreateUserEventsLabel_longitude=Longitude:
+CreateUserEventsRequiredMessage_longitude=The Longitude field is required.
+CreateUserEventsTitle_longitude=Longitude
+CreateUserEventsLabel_startTime=StartTime:
+CreateUserEventsRequiredMessage_startTime=The StartTime field is required.
+CreateUserEventsTitle_startTime=StartTime
+CreateUserEventsLabel_endTime=EndTime:
+CreateUserEventsRequiredMessage_endTime=The EndTime field is required.
+CreateUserEventsTitle_endTime=EndTime
+CreateUserEventsLabel_userId=UserId:
+CreateUserEventsTitle_userId=UserId
+EditUserEventsTitle=Edit UserEvents
+EditUserEventsSaveLink=Save
+EditUserEventsViewLink=View
+EditUserEventsShowAllLink=Show All UserEvents Items
+EditUserEventsIndexLink=Index
+EditUserEventsLabel_id=Id:
+EditUserEventsRequiredMessage_id=The Id field is required.
+EditUserEventsTitle_id=Id
+EditUserEventsLabel_eventName=EventName:
+EditUserEventsRequiredMessage_eventName=The EventName field is required.
+EditUserEventsTitle_eventName=EventName
+EditUserEventsLabel_latitude=Latitude:
+EditUserEventsRequiredMessage_latitude=The Latitude field is required.
+EditUserEventsTitle_latitude=Latitude
+EditUserEventsLabel_longitude=Longitude:
+EditUserEventsRequiredMessage_longitude=The Longitude field is required.
+EditUserEventsTitle_longitude=Longitude
+EditUserEventsLabel_startTime=StartTime:
+EditUserEventsRequiredMessage_startTime=The StartTime field is required.
+EditUserEventsTitle_startTime=StartTime
+EditUserEventsLabel_endTime=EndTime:
+EditUserEventsRequiredMessage_endTime=The EndTime field is required.
+EditUserEventsTitle_endTime=EndTime
+EditUserEventsLabel_userId=UserId:
+EditUserEventsTitle_userId=UserId
+ViewUserEventsTitle=View
+ViewUserEventsDestroyLink=Destroy
+ViewUserEventsEditLink=Edit
+ViewUserEventsCreateLink=Create New UserEvents
+ViewUserEventsShowAllLink=Show All UserEvents Items
+ViewUserEventsIndexLink=Index
+ViewUserEventsLabel_id=Id:
+ViewUserEventsTitle_id=Id
+ViewUserEventsLabel_eventName=EventName:
+ViewUserEventsTitle_eventName=EventName
+ViewUserEventsLabel_latitude=Latitude:
+ViewUserEventsTitle_latitude=Latitude
+ViewUserEventsLabel_longitude=Longitude:
+ViewUserEventsTitle_longitude=Longitude
+ViewUserEventsLabel_startTime=StartTime:
+ViewUserEventsTitle_startTime=StartTime
+ViewUserEventsLabel_endTime=EndTime:
+ViewUserEventsTitle_endTime=EndTime
+ViewUserEventsLabel_userId=UserId:
+ViewUserEventsTitle_userId=UserId
+ListUserEventsTitle=List
+ListUserEventsEmpty=(No UserEvents Items Found)
+ListUserEventsDestroyLink=Destroy
+ListUserEventsEditLink=Edit
+ListUserEventsViewLink=View
+ListUserEventsCreateLink=Create New UserEvents
+ListUserEventsIndexLink=Index
+ListUserEventsTitle_id=Id
+ListUserEventsTitle_eventName=EventName
+ListUserEventsTitle_latitude=Latitude
+ListUserEventsTitle_longitude=Longitude
+ListUserEventsTitle_startTime=StartTime
+ListUserEventsTitle_endTime=EndTime
+ListUserEventsTitle_userId=UserId
